--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -11,7 +11,7 @@ body{
 
 @import './containers/App.scss';
 @import './containers/ProjectForm.scss';
-
+@import './containers/ProjectChat.scss';
 
 
 @import './components/Auth.scss';
