--- a/client/stylesheets/containers/UserDashboard.scss
+++ b/client/stylesheets/containers/UserDashboard.scss
@@ -1,10 +1,38 @@
 #user_skills{
   border: 1px solid $tertiary;
+  width:50%;
   padding: 10px;
+  margin: 5px;
+  transform: translate(50%);
+}
+
+#user_stats{
+  border: 1px solid $tertiary;
+  padding:10px;
+  margin: 5px;
+  width:50%;
+  transform: translate(50%);
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  .stat_header{
+    position:relative;
+    border-top: 1px sold black;
+    bottom:0;
+  }
+  .Level{
+    width: 100%;
+  }
+  .Xp{
+    width:100%;
+  }
+}
+
+.welcome_message{
+  text-align: center;
 }
 
 #create_project{
-  border: 1px solid $tertiary;
   padding: 5px;
   margin-top: 10px;
   text-align: center;
@@ -24,18 +52,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 2;
 }
 
 .content-project{
   position: absolute;
   left: 50%;
   top: 50%;
-  // right: 40px;
-  // bottom: 40px;
   background: $primary;
   border: 2px solid $tertiary;
   height: 90%;
   width: 75%;
   transform: translate(-50%,-50%);
   transition: all 0.5s ease-in;
+
 }
