--- a/client/stylesheets/components/skill.scss
+++ b/client/stylesheets/components/skill.scss
@@ -12,10 +12,17 @@
   .skill_commends{
     padding:10px;
     // width: 50%;
-    text-align: right;
+    text-align: center;
   }
   .remove{
     // padding:10px;
     // margin-top:5px;
+    button{
+      background:$primary;
+      border: none;
+      box-shadow: none;
+      cursor: pointer;
+      color: red;
+    }
   }
 }
