--- a/client/stylesheets/components/ProjectChip.scss
+++ b/client/stylesheets/components/ProjectChip.scss
@@ -1,34 +1,47 @@
 .project_chip{
   // padding: 10px;
-  border: 1px solid $tertiary;
+  border: 0px solid rgba(123, 123, 123, 0.498039);
+  border-radius: 4px;
   display: inline-block;
   height: 200px;
   width: 350px;
   margin: 10px;
   vertical-align: top;
-  box-shadow: 0 1px 1px 0;
   position: relative;
-  border-radius: 2px;
+  background-color: $primary;
+  box-shadow: $tertiary 1px 1px 2px 1px;
+  text-decoration: none;
   cursor: pointer;
   .project_name{
     padding: 5px;
-    background-color: yellow;
-    height: 15%;
+    background-color: $primary;
+    // border-bottom: 0.5px solid black;
+    color: black;
+    font-weight: bold;
+    // height: 15%;
     text-align: center;
   }
   .project_description{
-    background-color: white;
+    background-color: $primary;
     padding:5px;
+    // border-bottom: 0.5px solid black;
+    // height:100%;
+    overflow:auto;
   }
   .project_category{
+    text-align: center;
     padding:5px;
-    background-color: blue;
+    font-weight: bold;
+    color: gray;
+    background-color: $primary;
+    border-bottom: 0.5px solid black;
+    // border-bottom: 0.5px solid gray;
   }
   .project_skills{
     position:absolute;
     box-sizing: border-box;
     width: 100%;
-    background-color: pink;
+    background-color: #e5e5e5;
     height: 25%;
     margin:0;
     padding:5px;
