--- a/client/stylesheets/components/ProjectChip.scss
+++ b/client/stylesheets/components/ProjectChip.scss
@@ -26,7 +26,9 @@
     padding:5px;
     // border-bottom: 0.5px solid black;
     // height:100%;
+    height:40%;
     overflow:auto;
+    text-overflow: ellipsis;
   }
   .project_category{
     text-align: center;
