styled chat room a bit

--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -38,3 +38,4 @@ a {
 @import './components/Auth.scss';
 @import './components/skill.scss';
 @import './components/ProjectChip.scss';
+@import './components/message.scss';
