userprofile looks ok

--- a/client/stylesheets/containers/UserDashboard.scss
+++ b/client/stylesheets/containers/UserDashboard.scss
@@ -1,4 +1,4 @@
-#user_skills{
+.user_skills{
   border: 1px solid $tertiary;
   width:50%;
   padding: 10px;
@@ -20,7 +20,7 @@
   }
 }
 
-#user_stats{
+.user_stats{
   border: 1px solid $tertiary;
   padding:10px;
   margin: 5px;
