--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -34,6 +34,7 @@ a {
 @import './containers/ProjectChat.scss';
 @import './containers/UserDashboard.scss';
 @import './containers/ProjectList.scss';
+@import './containers/UserProfile.scss';
 
 @import './components/Auth.scss';
 @import './components/skill.scss';
