projectdetail layout changed a bit

--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -35,6 +35,8 @@ a {
 @import './containers/UserDashboard.scss';
 @import './containers/ProjectList.scss';
 @import './containers/UserProfile.scss';
+@import './containers/ProjectDetail.scss';
+
 
 @import './components/Auth.scss';
 @import './components/skill.scss';
