refactored projectDetail to account for user already being a member of project

--- a/client/stylesheets/components/ProjectChip.scss
+++ b/client/stylesheets/components/ProjectChip.scss
@@ -27,7 +27,7 @@
     // border-bottom: 0.5px solid black;
     // height:100%;
     height:40%;
-    overflow:auto;
+    overflow:hidden;
     text-overflow: ellipsis;
   }
   .project_category{
