--- a/client/stylesheets/containers/UserDashboard.scss
+++ b/client/stylesheets/containers/UserDashboard.scss
@@ -18,6 +18,13 @@
       width:45%;
     }
   }
+  .user_add_skill{
+    display: flex;
+    flex-direction: row;
+    .Select{
+      flex-grow: 1;
+    }
+  }
 }
 
 .user_stats{
@@ -50,6 +57,9 @@
   padding: 5px;
   margin-top: 10px;
   text-align: center;
+  position: absolute;
+  top:10px;
+  right:10px;
   button{
     background-color: $primary;
   }
