more design changes

--- a/client/stylesheets/containers/App.scss
+++ b/client/stylesheets/containers/App.scss
@@ -26,7 +26,7 @@
       text-decoration: none;
       transition: all 0.3s ease-in;
       &:hover{
-        background: #201C2B; //make var if used more
+        background: #242038; //make var if used more
       }
       .project_name{
         // text-align: left;
