--- a/client/stylesheets/containers/ProjectDetail.scss
+++ b/client/stylesheets/containers/ProjectDetail.scss
@@ -33,6 +33,10 @@
     // padding:5px;
     .skill_chip{
       // margin: 10px;
+      background-color: $tertiary;
+      border-radius: 5px;
+      color: $primary;
+      box-shadow: none;
     }
   }
 
