--- a/client/stylesheets/components/ProjectChip.scss
+++ b/client/stylesheets/components/ProjectChip.scss
@@ -9,12 +9,13 @@
   vertical-align: top;
   position: relative;
   background-color: $primary;
-  box-shadow: $tertiary 1px 1px 2px 1px;
+  box-shadow: $secondary 1px 1px 2px 1px;
   text-decoration: none;
   cursor: pointer;
   .project_name{
     padding: 5px;
     background-color: $primary;
+    // background-color: #b7a4db;
     // border-bottom: 0.5px solid black;
     color: black;
     font-weight: bold;
@@ -36,6 +37,7 @@
     font-weight: bold;
     color: gray;
     background-color: $primary;
+    // background-color: #b7a4db;
     border-bottom: 0.5px solid black;
     // border-bottom: 0.5px solid gray;
   }
@@ -43,7 +45,7 @@
     position:absolute;
     box-sizing: border-box;
     width: 100%;
-    background-color: #e5e5e5;
+    background-color: #b7a4db;
     height: 25%;
     margin:0;
     padding:5px;
@@ -51,7 +53,11 @@
     display: flex;
     flex-direction: row;
     .skill_chip{
-      margin: 2px;
+      background-color: $tertiary;
+      border-radius: 5px;
+      color: $primary;
+      box-shadow: none;
+      margin:2px;
     }
   }
 }
