--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -20,21 +20,22 @@ body{
   margin: 0;
   line-height: 25px;
   // font-family: "helvetica";
+  font-size: 16px;
 }
 
-::-webkit-scrollbar {
-    width: 0.5em;
-}
-
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
-}
+// ::-webkit-scrollbar {
+//     width: 0.5em;
+// }
+//
+// ::-webkit-scrollbar-track {
+//     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+//     border-radius: 10px;
+// }
+//
+// ::-webkit-scrollbar-thumb {
+//     border-radius: 10px;
+//     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+// }
 
 button{
   padding: 10px;
