even more design

--- a/client/stylesheets/containers/ProjectChat.scss
+++ b/client/stylesheets/containers/ProjectChat.scss
@@ -62,7 +62,7 @@
         box-sizing: border-box;
       }
       .submit_message{
-        margin:5px;
+        margin: 0 5px;
         padding:10px;
       }
     }
