--- a/client/stylesheets/containers/ProjectForm.scss
+++ b/client/stylesheets/containers/ProjectForm.scss
@@ -7,7 +7,7 @@
   .submit_project{
     text-align: center;
     .submit{
-      background-color: $primary;
+      // background-color: $fifth;
       width:100px;
     }
   }
