--- a/client/stylesheets/components/ProjectChip.scss
+++ b/client/stylesheets/components/ProjectChip.scss
@@ -3,7 +3,7 @@
   border: 0px solid rgba(123, 123, 123, 0.498039);
   border-radius: 4px;
   display: inline-block;
-  height: 200px;
+  height: 300px;
   width: 350px;
   margin: 10px;
   vertical-align: top;
@@ -45,8 +45,8 @@
     position:absolute;
     box-sizing: border-box;
     width: 100%;
-    background-color: #b7a4db;
-    height: 25%;
+    background-color: #28262C;
+    height: 15%;
     margin:0;
     padding:5px;
     bottom:0;
