--- a/client/stylesheets/containers/ProjectDetail.scss
+++ b/client/stylesheets/containers/ProjectDetail.scss
@@ -17,17 +17,22 @@
     overflow-y: auto;
     box-sizing: border-box;
     height: 400px;
+    margin-top: 10px;
   }
 
   .project_skills{
-    position:absolute;
+    // position:absolute;
     // bottom:5px;
-    top: 100px;
-    // padding:10px;
-    right:10px;
+    // top: 100px;
+    padding:10px;
+    // left:10px;
     // height:25%;
     // border-top: 1px solid $tertiary;
     // width:100%;
+    // display: block;
+    align-items: center;
+    display: flex;
+    height: 5%;
     box-sizing: border-box;
     background-color: $primary;
     // padding:5px;
@@ -37,6 +42,10 @@
       border-radius: 5px;
       color: $primary;
       box-shadow: none;
+      margin: 0 5px;
+      width: auto;
+
+      height: 50%;
     }
   }
 
@@ -45,7 +54,7 @@
   {
     position: absolute;
     right: 10px;
-    top: 35px;
+    top: 25px;
     padding: 10px;
   }
 }
