--- a/client/stylesheets/containers/UserDashboard.scss
+++ b/client/stylesheets/containers/UserDashboard.scss
@@ -60,9 +60,9 @@
   position: absolute;
   top:10px;
   right:10px;
-  button{
-    background-color: $primary;
-  }
+  // button{
+  //   background-color: $primary;
+  // }
 }
 
 .overlay-project{
