--- a/client/stylesheets/containers/UserDashboard.scss
+++ b/client/stylesheets/containers/UserDashboard.scss
@@ -58,7 +58,7 @@
   margin-top: 10px;
   text-align: center;
   position: absolute;
-  top:10px;
+  top:0;
   right:10px;
   // button{
   //   background-color: $primary;
