--- a/client/stylesheets/components/Auth.scss
+++ b/client/stylesheets/components/Auth.scss
@@ -18,7 +18,7 @@
     display: block;
     width: 100%;
     text-align: center;
-    background:$primary;
+    // background:$primary;
     padding: 10px;
     margin: 20px 0;
   }
