--- a/client/stylesheets/containers/ProjectDetail.scss
+++ b/client/stylesheets/containers/ProjectDetail.scss
@@ -20,6 +20,13 @@
     margin-top: 10px;
   }
 
+  .link{
+    padding:15px;
+    // text-decoration: underline;
+    // color:$tertiary;
+    color:$primary;
+  }
+
   .project_skills{
     // position:absolute;
     // bottom:5px;
@@ -49,12 +56,17 @@
     }
   }
 
-  .join_project,
-  .edit_project
+  // .join_project,
+  // .edit_project,
+  .project_detail_actions
   {
     position: absolute;
+    display: flex;
     right: 10px;
     top: 25px;
-    padding: 10px;
+    // padding: 10px;
+    button{
+      margin: 5px;
+    }
   }
 }
