few changes to how categories are selected

--- a/client/stylesheets/containers/ProjectForm.scss
+++ b/client/stylesheets/containers/ProjectForm.scss
@@ -9,6 +9,8 @@
     .submit{
       // background-color: $fifth;
       width:100px;
+      // position: fixed;
+      // bottom:10px;
     }
   }
 }
