moved lots of static files outside the public file

--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -81,3 +81,8 @@ a {
 @import './components/ProjectChip.scss';
 @import './components/message.scss';
 @import './components/LandingPage.scss';
+
+
+@import './highlight/default.css';
+@import './font-awesome/font-awesome.min.css';
+@import './react-select.min.css';
