--- a/client/stylesheets/components/Auth.scss
+++ b/client/stylesheets/components/Auth.scss
@@ -10,8 +10,16 @@
       width: 50px;
     }
     input{
-      margin-left: 20px;
-      width: 80%;
+      background-color: $primary;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      color: #333;
+      height: 36px;
+      line-height: 34px;
+      width: 100%;
+      outline:0;
+      padding: 0 10px;
+      box-sizing: border-box;
     }
   }
   button{
