removed commented out code from scss files

--- a/client/stylesheets/containers/ProjectDetail.scss
+++ b/client/stylesheets/containers/ProjectDetail.scss
@@ -1,7 +1,5 @@
 .project_detail{
 
-  // padding:10px;
-  // position: relative;
   bottom:0;
   .header{
     padding:10px;
@@ -13,6 +11,7 @@
   }
 
   .owner{
+    // color: #ccc;
     padding:10px;
   }
 
@@ -25,30 +24,17 @@
   }
 
   .link{
-    // padding:15px;
-    // text-decoration: underline;
-    // color:$tertiary;
     color:$primary;
   }
 
   .project_skills{
-    // position:absolute;
-    // bottom:5px;
-    // top: 100px;
     padding:10px;
-    // left:10px;
-    // height:25%;
-    // border-top: 1px solid $tertiary;
-    // width:100%;
-    // display: block;
     align-items: center;
     display: flex;
     height: 5%;
     box-sizing: border-box;
     background-color: $primary;
-    // padding:5px;
     .skill_chip{
-      // margin: 10px;
       background-color: $tertiary;
       border-radius: 5px;
       color: $primary;
@@ -60,15 +46,13 @@
     }
   }
 
-  // .join_project,
-  // .edit_project,
+
   .project_detail_actions
   {
     position: absolute;
     display: flex;
     right: 10px;
     top: 15px;
-    // padding: 10px;
     button{
       margin: 5px;
     }
