message_box grows dynamically

--- a/client/stylesheets/containers/ProjectChat.scss
+++ b/client/stylesheets/containers/ProjectChat.scss
@@ -36,6 +36,7 @@
       flex-shrink: 0;
       margin-bottom: 0;
       display: flex;
+      // flex-grow:2;
       flex-direction: row;
       .message_box{
         padding: 10px 10px;
