--- a/client/stylesheets/containers/App.scss
+++ b/client/stylesheets/containers/App.scss
@@ -9,15 +9,33 @@
 #slide:checked ~ .appbar{
   margin-left: 20%;
   width:80%;
+  @media only screen and (max-width: 480px){
+    margin-left: 80%;
+  }
 }
 
 #slide:checked ~ #Main{
   margin-left: 20%;
   width: 80%;
+  @media only screen and (max-width: 480px){
+    margin-left: 80%;
+    opacity: 0;
+  }
 }
 
-#slide:checked ~ .appbar .toggle{
-  // left: 21%;
+#slide:checked ~ .appbar .toggle span:nth-child(1){
+  top: 5px;
+  transform: rotate(135deg);
+}
+
+#slide:checked ~ .appbar .toggle span:nth-child(2){
+  opacity: 0;
+  left: -60px;
+}
+
+#slide:checked ~ .appbar .toggle span:nth-child(3){
+  top: 5px;
+  transform: rotate(-135deg);
 }
 
 .sidebar{
@@ -64,6 +82,10 @@
       }
     }
   }
+  @media only screen and (max-width: 480px){
+    width: 80%;
+    left: -80%;
+  }
 }
 
 .active_link{
@@ -80,7 +102,6 @@
   padding: 5px;
   z-index: 1;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   .github_auth{
     width:auto;
@@ -92,24 +113,52 @@
     font-size: 0.5em;
   }
   .toggle{
-    text-decoration: none;
-    font-size: 2em;
-    color: rgba(0, 0, 0, 0.61);
-    // transition: all 0.5s ease-out 0;
-    transition: all 0.5s ease-in;
-    position:fixed;
-    z-index: 99;
+    position: relative;
+    transform: rotate(0deg);
+    transition: .5s ease-in-out;
     cursor: pointer;
-    margin-top: 0.5em;
+    color: rgba(0, 0, 0, 0.61);
+    height:25px;
+    width: 1.5em;
+    padding: 0;
+    margin:0;
+    z-index: 3;
+    margin-top: 10px;
+  }
+  .toggle span{
+    padding:0;
+    display: block;
+    position: absolute;
+    height: 13%;
+    width: 100%;
+    background: black;
+    border-radius: 15px;
+    opacity: 1;
+    left: 0;
+    transform: rotate(0deg);
+    transition: .25s ease-in-out;
+  }
+  .toggle span:nth-child(1) {
+    top: 0px;
+  }
+
+  .toggle span:nth-child(2) {
+    top: 5px;
+  }
+
+  .toggle span:nth-child(3) {
+    top: 10px;
   }
   .page_title{
-    // transform: translateX(50%);
-    margin-left: 5%;
+    padding:5px;
+    margin-left: 15px;
+    font-size: 1.5em;
   }
 }
 
 .auth{
   position: absolute;
+  margin-top: 10px;
   right: 10px;
   button{
     margin: 5px;
@@ -144,8 +193,6 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
-  // right: 40px;
-  // bottom: 40px;
   background: $primary;
   border: 2px solid $tertiary;
   height: auto;
@@ -157,13 +204,11 @@
   padding: 0;
   margin: 0;
   position: absolute;
-  // left:20%;
   transition: all 0.5s ease-in;
   width:100%;
   top: 10%;
   bottom:0;
   right:0;
-  // height:100%;
 }
 
 #loading{
@@ -173,7 +218,6 @@
   right : 0;
   bottom  : 0;
   background-color : rgba(255, 255, 255, 0.75);
-  // transition: all 0.5s ease-in;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -185,14 +229,11 @@
   right:0;
   bottom:0;
   top:0;
-  // background-color: pink;
   padding:5px;
   margin:0;
   width: 20%;
-  // height: 100%;
   text-align: center;
   display: flex;
-  // z-index: -1;
   pointer-events: none;
   flex-direction: column-reverse;
   .notification_wrapper{
