--- a/client/stylesheets/components/LandingPage.scss
+++ b/client/stylesheets/components/LandingPage.scss
@@ -4,25 +4,53 @@
   display:flex;
   flex-direction: column;
   height:100%;
+  letter-spacing: 2.5px;
   .why__42{
-    margin-bottom:30px;
     padding:0;
+    height: 90vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content:center;
-    background: $primary;
+    align-items: center;
+    background: $tertiary;
     text-align: center;
+    border-bottom: 0.2px solid $primary;
+    .title{
+      font-size: 2em;
+      line-height: 2em;
+      padding: 10px;
+    }
     .explanation{
       text-align: center;
+      font-size: 1.5em;
+      font-weight: 300;
+      padding: 10px 45px;
+      color: $primary;
     }
     h2{
-      color: $tertiary;
+      color: $secondary;
     }
     p{
       word-wrap: break-word;
       justify-content: center;
       text-align: center;
+    }
+    .login_github{
+      padding: 5px;
+      width: 10%;
+      font-size: 1em;
+      color: $fourth;
+      background-color: $primary;
+      font-weight: bolder;
+      box-shadow: none;
+      border: $fourth;
+      box-shadow: 0.5px 0.5px 1px 0.5px $fourth;
+      border-radius: 8px;
+      cursor: pointer;
+      img{
+        background-color: $secondary;
+      }
     }
   }
 }
