--- a/client/stylesheets/components/ProjectChip.scss
+++ b/client/stylesheets/components/ProjectChip.scss
@@ -1,8 +1,8 @@
 .project_chip{
   border: 0px solid rgba(123, 123, 123, 0.498039);
-  border-radius: 4px;
+  // border-radius: 4px;
   display: inline-block;
-  height: 300px;
+  height: 400px;
   width: 350px;
   margin: 10px;
   vertical-align: top;
@@ -13,31 +13,34 @@
   cursor: pointer;
   .project_name{
     padding: 5px;
-    background-color: $primary;
-    color: black;
+    // background-color: $primary;
+    background-color: $fourth;
+    color: $primary;
     font-weight: bold;
     text-align: center;
   }
   .project_description{
-    background-color: $primary;
-    padding:5px;
+    // background-color: $primary;
+    padding:10px;
     height:40%;
     overflow:hidden;
     text-overflow: ellipsis;
   }
   .project_category{
     text-align: center;
+    background-color: $fourth;
+    color: $primary;
     padding:5px;
     font-weight: bold;
-    color: gray;
-    background-color: $primary;
+    // color: gray;
+    // background-color: $primary;
     border-bottom: 0.5px solid black;
   }
   .project_skills{
     position:absolute;
     box-sizing: border-box;
     width: 100%;
-    background-color: #28262C;
+    background-color: $fourth;
     margin:0;
     padding:5px;
     bottom:0;
