--- a/client/stylesheets/components/ProjectChip.scss
+++ b/client/stylesheets/components/ProjectChip.scss
@@ -1,30 +1,31 @@
 .project_chip{
   border: 0px solid rgba(123, 123, 123, 0.498039);
-  // border-radius: 4px;
-  display: inline-block;
+  // display: inline-block;
+  display: flex;
+  flex-direction: column;
   height: 400px;
   width: 350px;
   margin: 10px;
   vertical-align: top;
   position: relative;
   background-color: $primary;
-  box-shadow: $secondary 1px 1px 2px 1px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 5);
   text-decoration: none;
   cursor: pointer;
   .project_name{
     padding: 5px;
-    // background-color: $primary;
     background-color: $fourth;
     color: $primary;
     font-weight: bold;
     text-align: center;
   }
   .project_description{
-    // background-color: $primary;
+    color: $fourth;
     padding:10px;
     height:40%;
     overflow:hidden;
     text-overflow: ellipsis;
+    flex-grow: 2;
   }
   .project_category{
     text-align: center;
@@ -32,12 +33,10 @@
     color: $primary;
     padding:5px;
     font-weight: bold;
-    // color: gray;
-    // background-color: $primary;
     border-bottom: 0.5px solid black;
   }
   .project_skills{
-    position:absolute;
+    // position:absolute;
     box-sizing: border-box;
     width: 100%;
     background-color: $fourth;
@@ -53,6 +52,7 @@
       color: $primary;
       box-shadow: none;
       margin:2px;
+      max-height: 25px;
     }
   }
 }
