--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -9,7 +9,7 @@ $primary:#FFFFFF; //WHITE
 $secondary:#0B132B; //MAASTRICHT BLUE
 $tertiary: #281985; //PIXIE POWDER
 $fourth:#02020A; // RICH BLACK
-$fifth:#CECFC7; // DARK PURPLE
+$fifth:#CECFC7; 
 
 $activeLink:#242038;
 
