--- a/client/stylesheets/components/LandingPage.scss
+++ b/client/stylesheets/components/LandingPage.scss
@@ -10,6 +10,7 @@
     height: 100vh;
     line-height: 30px;
     width: 100%;
+    overflow: auto;
     display: flex;
     flex-direction: column;
     justify-content:center;
