--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -9,7 +9,7 @@ $primary:#FFFFFF; //WHITE
 $secondary:#0B132B; //MAASTRICHT BLUE
 $tertiary: #281985; //PIXIE POWDER
 $fourth:#02020A; // RICH BLACK
-$fifth:#CECFC7; 
+$fifth:#CECFC7;
 
 $activeLink:#242038;
 
@@ -18,12 +18,14 @@ html{
   letter-spacing: 1px;
 }
 
+
 body{
   padding:0;
   margin: 0;
   line-height: 25px;
   font-size: 12px;
   font-family: 'Merriweather';
+  min-height: 100%;
 }
 
 
