--- a/client/stylesheets/components/LandingPage.scss
+++ b/client/stylesheets/components/LandingPage.scss
@@ -5,12 +5,11 @@
   flex-direction: column;
   height:100%;
   letter-spacing: 2.5px;
-  .why__42{
+  .landing{
     padding:0;
-    height: 100vh;
+    height: 90vh;
     line-height: 30px;
     width: 100%;
-    overflow: auto;
     display: flex;
     flex-direction: column;
     justify-content:center;
@@ -18,6 +17,12 @@
     background: $tertiary;
     text-align: center;
     border-bottom: 0.2px solid $primary;
+    // text-decoration doesnt work.
+    .intro {
+      .title{
+        text-decoration: underline;
+      }
+    }
     .title{
       font-size: 2em;
       line-height: 2em;
